# casper-eip-712

./: .gitignore  Cargo.toml  README.md  project-rules.md
.github/workflows/: publish-go.yaml  publish-npm.yaml
blog-drafts/: image1.html  image2.html  task-327-eip712-blog-devto.md  task-327-eip712-blog-medium.md  task-327-eip712-blog.md  task-327-image-specs.md  task-327-x-announcements.md
examples/permit-token/: README.md
examples/permit-token/demo/: demo.ts  package-lock.json
examples/permit-token/src/: permit_token.rs
examples/permit-token/tests/: integration.rs
go/: README.md  cross_language_test.go  doc.go  domain.go  domain_test.go  encoding.go  encoding_test.go  go.mod  go.sum  hash.go  hash_test.go  keccak.go  keccak_test.go  type_hash.go  type_string.go  type_string_test.go  types.go  utils.go  utils_test.go  verify.go  verify_test.go
go/prebuilt/: approval.go  permit.go  prebuilt_test.go  transfer.go
js/: README.md  package-lock.json  package.json
js/src/: domain.ts  encoding.ts  index.ts  verify.ts
js/src/prebuilt/: approval.ts  index.ts  permit.ts  transfer-authorization.ts  transfer.ts
js/tests/: cross-language.test.ts  domain.test.ts  encoding.test.ts  verify.test.ts
scripts/: generate-vectors.ts  package-lock.json  package.json
src/: casper_native.rs  domain.rs  encoding.rs  hash.rs  keccak.rs  lib.rs  prelude.rs  traits.rs  type_hash.rs  verify.rs
src/types/: approval.rs  mod.rs  permit.rs  transfer.rs
tests/: cross_language.rs  vectors.json
