[package]
name = "casper-eip-712"
version = "1.0.0"
edition = "2021"
description = "EIP-712 typed data hashing and domain separation for Casper Network"
license = "Apache-2.0"
repository = "https://github.com/make-software/casper-eip-712"
keywords = ["casper", "eip-712", "crypto", "blockchain", "signing"]
categories = ["cryptography", "no-std"]

[features]
default = []
verify = ["dep:k256"]

[dependencies]
sha3 = { version = "0.10", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] , optional = true }

[dev-dependencies]
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
hex-literal = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
